2012-10-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPropertyList.m (-[GSBinaryPLGenerator storeString:):
	Write unicode strings in big-endian instead of little-endian.
	The resulting plists now load properly on OS X. Thanks to
	rdemet for bug report.

2012-10-15  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSCharacterSet.h:
        * Source/NSCharacterSet.m:
        For a long time Apple's docs and headers said that the methods for
        returning standard charactersets returned 'NSCharacterSet*', which
        was annoying when they were called on NSMutableCharacterSet.
        It seems they finally changed to returning id, so we can do the same.

2012-10-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/NSDebug+GNUstepBase.h:
        Fix format of logs produced by two of the three method macros ...
        a bug spotted by Fred.

2012-10-03  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFormat.m: for C-string formatting, avoid reading to the
        nul terminator ... limit to a number of bytes equal to the precision
        (if any) given in the format. This may be the wrong thing to do when
        handling multibyte encodings (where a natural expectation is to have
        precision mean number of characters), but seems legitimate going by
        current xopen printf documentation.

2012-10-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* SSL/GSSSLHandle.m (-sslSetOptions): Apply string name change
	missed during TLS reorganisation.

2012-09-30  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSSocketStream.m:
        * Source/GSTLS.m:
        * Source/GSHTTPURLHandle.m:
        * Source/NSURLProtocol.m:
        * Headers/Foundation/NSFileHandle.h:
        Add GNUstep TLS/SSL options when loading HTTPS URLs.

2012-09-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSUserDefaults.m: Fix error synchronising from changes in